Bug 341229 - Alignment for highlight of items looks little off
Summary: Alignment for highlight of items looks little off
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Menu (Kicker) widget (other bugs)
Version First Reported In: master
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-24 15:14 UTC by Bhushan Shah
Modified: 2014-12-01 17:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bhushan Shah 2014-11-24 15:14:05 UTC
plasma-framework : 8415c20760c6d6bb017618e09e855985ffd6ecd8
plasma-workspace : 8738452c9c2ad2000bb7499dca3533945d5b9aac
plasma-desktop : 5df33713c0cf27099f89718b89db6e2cf2c4825d

Theme: breeze-dark

See screenshot

http://imgur.com/9Ta8BUL

Reproducible: Always
Comment 1 Bhushan Shah 2014-11-30 05:51:21 UTC
I noticed that number of favorites in sidebar also makes difference.. I have 6 favorites and problem in alignment is more clearly visible
Comment 2 Eike Hein 2014-11-30 22:15:37 UTC
Ah yeah, I see alignment problems when there are so many favorites they cause the menu to resize (9 needed on my distro). Couldn't reproduce before. Will fix next week.
Comment 3 Eike Hein 2014-12-01 17:16:23 UTC
Git commit 3c54add7d287e2edcba17ab0109482791c638c99 by Eike Hein.
Committed on 01/12/2014 at 17:15.
Pushed by hein into branch 'Plasma/5.1'.

Fix vertical aligment.

M  +5    -1    applets/kicker/plugin/submenu.cpp

http://commits.kde.org/plasma-desktop/3c54add7d287e2edcba17ab0109482791c638c99