Fix vertical aligment.

BUG:341229